# project-gupt-windows-app

./: .gitignore  CMakeLists.txt  README.md
ClientViewer/: main.cpp
Core/Capture/: ScreenCapturer.cpp  ScreenCapturer.h
Core/Input/: InputInjector.cpp  InputInjector.h
Core/Network/: TcpNetwork.cpp  TcpNetwork.h
CrossPlatform/: Cargo.toml  NEXT_STEPS.md  README.md  TESTING.md
CrossPlatform/apps/gupt-desktop/: index.html  package-lock.json  package.json
CrossPlatform/apps/gupt-desktop/src/: main.js  protocol.js  styles.css
CrossPlatform/apps/gupt-desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
CrossPlatform/apps/gupt-desktop/src-tauri/icons/: icon.icns
CrossPlatform/apps/gupt-desktop/src-tauri/src/: main.rs
CrossPlatform/crates/gupt-core/: Cargo.toml
CrossPlatform/crates/gupt-core/src/: engine.rs  lib.rs  protocol.rs  types.rs
CrossPlatform/crates/gupt-core/src/platform/: macos.rs  mod.rs  windows.rs
HostAgent/: main.cpp
Launcher/: main.cpp
Shared/: Protocol.h
SignalingServer/: Dockerfile  deploy_to_gcp.bat  package-lock.json  package.json  server.js
