[package]
name = "gupt-desktop"
version = "0.1.0"
edition = "2021"
license = "Proprietary"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gupt-core = { path = "../../../crates/gupt-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
