[package]
name = "gupt-desktop"
version = "0.1.0"
edition = "2021"
license = "Proprietary"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gupt-core = { path = "../../../crates/gupt-core" }
enigo = "0.6.1"
lazy_static = "1.5.0"
core-graphics = "0.25.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
